# bridge

./: .gitignore  CHANGELOG.md  Cargo.toml  Makefile  README.md  integration.md  openapi.json  plan.md  progress.json  serper.sample.json
crates/api/: Cargo.toml
crates/api/src/: lib.rs  middleware.rs  router.rs  sse.rs  state.rs  tests.rs
crates/api/src/handlers/: agents.rs  conversations.rs  health.rs  metrics.rs  mod.rs  permissions.rs  push.rs  stream.rs
crates/bridge/: Cargo.toml
crates/bridge/src/: main.rs  server.rs
crates/core/: Cargo.toml
crates/core/src/: agent.rs  artifacts.rs  config.rs  conversation.rs  error.rs  lib.rs  mcp.rs  metrics.rs  permission.rs  provider.rs  skill.rs  tests.rs  tool.rs  webhook.rs
crates/core/src/agent/: mod.rs  runtime.rs
crates/core/src/tests/: agent_roundtrip.rs  bench_template.rs  integration_roundtrip.rs  mod.rs
crates/llm/: Cargo.toml
crates/llm/src/: cache_resource_pool.rs  factory.rs  lib.rs  permission_manager.rs  prefix_hash.rs  providers.rs  streaming.rs  tool_adapter.rs  tool_hook.rs
crates/llm/src/providers/: dispatch.rs  prompt_hooked.rs  prompt_plain.rs
crates/llm/src/tool_hook/: coerce.rs  mod.rs  permission.rs  repeat_guard.rs  result_hook.rs
crates/mcp/: Cargo.toml
crates/mcp/src/: connection.rs  lib.rs  manager.rs  tool_bridge.rs
crates/runtime/: Cargo.toml
crates/runtime/src/: agent_map.rs  agent_runner.rs  agent_state.rs  compaction.rs  conversation.rs  drain.rs  environment.rs  history_guard.rs  immortal.rs  lib.rs  permission_manager.rs  supervisor.rs  system_reminder.rs  token_tracker.rs
crates/runtime/src/agent_runner/: background.rs  foreground.rs  mod.rs  runner_impl.rs  session_store.rs  tests.rs
crates/runtime/src/compaction/: mod.rs  serialize.rs  tests.rs  tokens.rs
crates/runtime/src/conversation/: context_mgmt.rs  convert.rs  finalize.rs  init.rs  mod.rs  params.rs  receive.rs  recovery.rs  run.rs  stream_loop.rs  streaming.rs  tests.rs  tests_layout.rs  tests_roundtrip.rs  turn_classify.rs  turn_result.rs  turn_success.rs  turn_wait.rs  volatile.rs
crates/runtime/src/immortal/: handoff.rs  mod.rs  prompts.rs  tests.rs
crates/runtime/src/masking/: helpers.rs  mod.rs  tests.rs
crates/runtime/src/skill_discovery/: discoverers.rs  helpers.rs  mod.rs  parsers.rs  tests.rs
crates/runtime/src/supervisor/: agent_build.rs  agent_loading.rs  conv_mcp.rs  conversations.rs  conversations_helpers.rs  helpers.rs  hydration.rs  messaging.rs  mod.rs  tests_conv.rs  tests_filters.rs  tests_mcp.rs  tests_mock.rs  tests_subagent.rs
crates/runtime/src/system_reminder/: builder.rs  convenience.rs  date_tracker.rs  mod.rs
crates/runtime/src/tool_enforcement/: matching.rs  mod.rs  tests.rs
crates/storage/: Cargo.toml
crates/storage/src/: backend.rs  compression.rs  config.rs  error.rs  lib.rs  libsql_backend.rs  schema.rs  sqlite_backend.rs  writer.rs
crates/storage/src/sqlite_backend/: artifacts.rs  core.rs  mod.rs
crates/sync/: Cargo.toml
crates/sync/src/: diff.rs  lib.rs  poller.rs  updater.rs
crates/tools/: Cargo.toml
crates/tools/assets/: laravel-filters.toml
crates/tools/src/: agent.rs  apply_patch.rs  ast_grep.rs  bash.rs  batch.rs  boundary.rs  builtin.rs  diagnostics_helper.rs  edit.rs  edit_strategies.rs  file_tracker.rs  glob.rs  grep.rs  integration.rs  join.rs  lib.rs  ls.rs  lsp_tool.rs  multiedit.rs  parallel_agent.rs  ping_me_back.rs  read.rs  registry.rs  rip_grep.rs  self_agent.rs  skill_tools.rs  todo.rs  truncation.rs  web_fetch.rs  web_search.rs  write.rs
crates/tools/src/apply_patch/: apply.rs  matcher.rs  mod.rs  parser.rs  tests.rs
crates/tools/src/artifacts/: mod.rs  tests.rs  tus.rs
crates/tools/src/bash/: mod.rs  rtk.rs  runner.rs
crates/tools/src/edit/: args.rs
crates/tools/src/glob/: tests.rs
crates/tools/src/instructions/: agent.txt  ast_grep.txt  bash.txt  glob.txt  grep.txt  join.txt  ls.txt  parallel_agent.txt  ping_me_back.txt  read.txt  rip_grep.txt  self_agent.txt  skill.txt  sub_agent.txt
crates/tools/src/lsp_tool/: mod.rs  ops.rs
crates/tools/src/read/: execute.rs  helpers.rs  mod.rs  text.rs
crates/tools/src/spider_tools/: crawl.rs  links.rs  mod.rs  screenshot.rs  search.rs  transform.rs
crates/tools/src/todo/: tests.rs  tools.rs
crates/tools/src/web_fetch/: client.rs  mod.rs  parser.rs
crates/tools/src/web_search/: mod.rs  tests.rs
crates/tools/src/write/: mod.rs
crates/webhooks/: Cargo.toml
crates/webhooks/src/: context.rs  delivery.rs  dispatcher.rs  event_bus.rs  events.rs  lib.rs  signer.rs
e2e/bridge-e2e/: Cargo.toml
e2e/bridge-e2e/src/: harness.rs  lib.rs
e2e/bridge-e2e/tests/: approval_e2e_a_tests.rs  approval_e2e_b_tests.rs  approval_e2e_c_tests.rs  approval_e2e_tests.rs  codedb_e2e_tests.rs  conversation_scoping_e2e_a_tests.rs  conversation_scoping_e2e_b_tests.rs  e2e_a_tests.rs  e2e_b_tests.rs  e2e_c_tests.rs  e2e_d_tests.rs  e2e_tests.rs  immortal_e2e_a_tests.rs  immortal_e2e_b_tests.rs  integration_e2e_a_tests.rs  integration_e2e_b_tests.rs  integration_e2e_tests.rs  integration_real_e2e_a_tests.rs  integration_real_e2e_b_tests.rs  integration_real_e2e_c_tests.rs  integration_real_e2e_d_tests.rs  integration_real_e2e_e_tests.rs  integration_real_e2e_tests.rs  observability_e2e_a_tests.rs  observability_e2e_b_tests.rs  observability_e2e_tests.rs  parallel_e2e_a_tests.rs  parallel_e2e_b_tests.rs  parallel_e2e_tests.rs  real_e2e_a_tests.rs  real_e2e_b_tests.rs  real_e2e_c_tests.rs  real_e2e_d_tests.rs  real_e2e_e_tests.rs  real_e2e_f_tests.rs  real_e2e_g_tests.rs  real_e2e_h_tests.rs  real_e2e_i_tests.rs  real_e2e_j_tests.rs  real_e2e_k_tests.rs  (+5 more)
e2e/mock-control-plane/: Cargo.toml
e2e/mock-control-plane/src/: main.rs  mock_llm.rs  routes.rs  store.rs
e2e/mock-control-plane/src/mock_llm/: mod.rs  responses.rs  streams.rs  triggers.rs  (+1 more)
e2e/mock-mcp-server/: Cargo.toml
e2e/mock-mcp-server/src/: main.rs
e2e/storage-e2e/: Cargo.toml
e2e/storage-e2e/src/: lib.rs
e2e/storage-e2e/tests/: storage_e2e_a_tests.rs  storage_e2e_b_tests.rs  storage_e2e_c_tests.rs  storage_e2e_tests.rs
(+151 files in other folders)
