[package]
name = "bridge"
version = "0.8.1"
edition = "2021"

[features]
openapi = ["api/openapi", "dep:utoipa"]

[[bin]]
name = "bridge"
path = "src/main.rs"

[[bin]]
name = "gen-openapi"
path = "src/bin/gen_openapi.rs"
required-features = ["openapi"]

[dependencies]
bridge_core = { workspace = true }
lsp = { workspace = true }
runtime = { workspace = true }
api = { workspace = true }
webhooks = { workspace = true }
mcp = { workspace = true }
tools = { workspace = true }
axum = { workspace = true }
tokio = { workspace = true }
tokio-util = { workspace = true }
figment = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
anyhow = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
utoipa = { workspace = true, optional = true }
clap = { version = "4.5", features = ["derive"] }
