[package]
name = "llm"
version = "0.1.0"
edition = "2021"

[dependencies]
bridge_core = { workspace = true }
tools = { workspace = true }
rig-core = { workspace = true }
reqwest = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
async-trait = { workspace = true }
tracing = { workspace = true }
thiserror = { workspace = true }

[dev-dependencies]
pretty_assertions = { workspace = true }
tokio = { workspace = true }
