[package]
name = "sync"
version = "0.1.0"
edition = "2021"

[dependencies]
bridge_core = { workspace = true }
runtime = { workspace = true }
reqwest = { workspace = true }
tokio = { workspace = true }
tokio-util = { workspace = true }
backon = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }
thiserror = { workspace = true }

[dev-dependencies]
pretty_assertions = { workspace = true }
tokio = { workspace = true }
wiremock = { workspace = true }
