[package]
name = "tools"
version = "0.1.0"
edition = "2021"

[dependencies]
bridge_core = { workspace = true }
ignore = { workspace = true }
globset = { workspace = true }
grep-regex = { workspace = true }
grep-searcher = { workspace = true }
grep-matcher = { workspace = true }
regex = { workspace = true }
dom_smoothie = { workspace = true }
htmd = { workspace = true }
reqwest = { workspace = true }
schemars = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
async-trait = { workspace = true }
chrono = { workspace = true }
tracing = { workspace = true }
thiserror = { workspace = true }
backon = { workspace = true }

[dev-dependencies]
pretty_assertions = { workspace = true }
tempfile = { workspace = true }
tokio = { workspace = true }
wiremock = { workspace = true }
