[package]
name = "tools"
version = "0.3.0"
edition = "2021"

[dependencies]
bridge_core = { workspace = true }
storage = { workspace = true }
lsp = { workspace = true }
lsp-types = "0.97"
ignore = { workspace = true }
globset = { workspace = true }
regex = { workspace = true }
dom_smoothie = { workspace = true }
htmd = { workspace = true }
mime = { workspace = true }
reqwest = { workspace = true }
schemars = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
unicode-normalization = { workspace = true }
uuid = { workspace = true }
futures = { workspace = true }
async-trait = { workspace = true }
chrono = { workspace = true }
tracing = { workspace = true }
thiserror = { workspace = true }
backon = { workspace = true }
strsim = { workspace = true }
similar = { workspace = true }
dashmap = { workspace = true }
base64 = { workspace = true }
hex = { workspace = true }
sha2 = { workspace = true }
mime_guess = { workspace = true }
tokio-util = { workspace = true }
bytes = "1"
libc = { workspace = true }
dirs = "5"
anyhow = { workspace = true }

[dev-dependencies]
pretty_assertions = { workspace = true }
tempfile = { workspace = true }
tokio = { workspace = true }
wiremock = { workspace = true }
axum = { workspace = true }
