[package]
name = "bridge-e2e"
version = "0.1.0"
edition = "2021"

[dependencies]
bridge_core = { workspace = true }
reqwest = { workspace = true }
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }
uuid = { workspace = true }
futures = { workspace = true }

[dev-dependencies]
tokio = { workspace = true }
