[package]
name = "mock-control-plane"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "mock-control-plane"
path = "src/main.rs"

[dependencies]
bridge_core = { workspace = true }
axum = { workspace = true }
tokio = { workspace = true }
tokio-stream = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
async-stream = "0.3"
