[package]
name = "mock-mcp-server"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "mock-mcp-server"
path = "src/main.rs"

[dependencies]
rmcp = { version = "0.17", features = ["server", "transport-io", "macros"] }
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
chrono = "0.4"
